Bug 636564 - Implement Lion style scrollbars on Mac OSX 10.7+. r=roc
UltraBlame original commit: 1840b15583fd3bd4c8f6bb40491cd68f84e39fc5

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -925,7 +925,7 @@ grippy {
 
 
 
-scrollbar {
+scrollbar[orient="horizontal"] {
   direction: ltr;
 }
 
